--- a/index.html
+++ b/index.html
@@ -3566,7 +3566,7 @@
 
                                                 <button class="btn" type="submit">Enquire Now</button>
 
-                                                <div id="result" style="color: #ffcb22;"></div>
+                                                <div id="result" style="color: red;"></div>
 
                                             </form>
 
