--- a/index.html
+++ b/index.html
@@ -3574,25 +3574,25 @@ src="https://www.facebook.com/tr?id=545531035289398&ev=PageView&noscript=1"
 
                                         <div>
                                             <form method="POST" id="form">
-                                                <h2>Get Quote</h2>
+                                                <h2>Connect with an Expert</h2>
 
                                                 <input type="hidden" name="access_key" value="f8d3687d-d457-4ddf-940e-cd7641b6f84f">
-                                                <label for="">Enter Your Name</label>
+                                                <!-- <label for="">Enter Your Name</label> -->
                                                 <input class="form-fields" type="text" name="name" placeholder="Name" required>
-                                                <label for="">Enter Your Email Id</label>
+                                                <!-- <label for="">Enter Your Email Id</label> -->
                                                 <input class="form-fields" type="email" name="email" placeholder="Email Id" required>
-                                                <label for="">Enter Your Mobile Number</label>
+                                                <!-- <label for="">Enter Your Mobile Number</label> -->
                                                 <input class="form-fields" type="tel" name="phone" placeholder="Phone Number" required>
-                                                <label for="">Enter Your Country Name</label>
+                                                <!-- <label for="">Enter Your Country Name</label> -->
                                                 <input class="form-fields" type="text" name="country" placeholder="Country" required>
-                                                <label for="">Enter Your State</label>
+                                                <!-- <label for="">Enter Your State</label>
                                                 <input class="form-fields" type="text" name="state" placeholder="State" required>
                                                 <label for="">Enter Your Pincode</label>
                                                 <input class="form-fields" type="text" name="pincode" placeholder="Pincode" required>
-                                                <!-- <textarea name="message" required></textarea> -->
+                                                <textarea name="message" required></textarea> -->
                                                 <input class="form-fields" type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
-                                                <button class="btn" type="submit">Enquire Now</button>
+                                                <button class="btn" type="submit">Request a Callback</button>
 
                                                 <div id="result" style="color: red;"></div>
 
